<resources>
    <string name="app_name">CityGuideApp</string>
    <string name="logo_name">Get a way</string>
    <string name="motto_name">We will help you to find your way !!!</string>
    <string name="powered_by">Powered by panic girl</string>

    <!-- Strings for On Boarding Screen -->
    <!--Titles-->
    <string name="first_slide_title">Search Your Location</string>
    <string name="second_slide_title">Make A Call</string>
    <string name="third_slide_title">Add Missing Place</string>
    <string name="fourth_slide_title">Sit Back And Enjoy</string>

    <!--Descriptions-->
    <string name="first_slide_desc">You can search any place nearby or with-in the specified city. We will display specific or all related shops to match your search. </string>
    <string name="second_slide_desc">We provide almost all the numbers of all departments and shops registered with us. You can perform bookings as well.</string>
    <string name="third_slide_desc">If you have a shop or somethings and want to be a part of our growing industry then add your place by follwing simple steps.</string>
    <string name="fourth_slide_desc">We will handle everything for you. As you have the app in your pocket then you dont have to worry about anything.</string>

    <!--Buttons-->
    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Lets Get Started</string>

    <!--    strings for description-->

    <!--    categories-->
    <string name="hotels">Hotels</string>
    <string name="restaurants">Restaurants</string>
    <string name="education">education</string>
    <string name="banks">Banks</string>
    <string name="airports">Airports</string>

    <!--    Title and descriptions-->

    <string name="featured_locations">All featured locations</string>
    <string name="featured_locations_description">All the locations that are featured and have the top demand in town!</string>
    <string name="most_viewed_locations">Most viewed</string>
    <string name="categories">Categories</string>
    <string name="view_all">View All</string>
    <string name="search_text">Search...</string>


    <!--    login logout-->

    <string name="login">Login</string>
    <string name="signup">SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="how_we_work">How we work?</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="retailer_heading">Grow up your business</string>
    <string name="retailer_tag_line">Retail Therapy, Anywhere You Go. Retailers Best Friend in Every City"</string>


    <string name="enter_full_name">Enter Full Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="home">HOME</string>
    <string name="all_categories">ALL CATEGORIES</string>
    <string name="current_place">Current Place</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="shop">Shop</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="slogan_name">Everything about your city is here</string>
    <string name="car_rent">Car Rent</string>
    <string name="expand_all">Expand All</string>

</resources>